--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -74,12 +74,11 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
-                <li><a href="#products-section" class="nav-link">Products</a></li>
-                <li><a href="#about-section" class="nav-link">About Us</a></li>
-                <li><a href="#special-section" class="nav-link">Special</a></li>
                 <li><a href="#events-section" class="nav-link">Events</a></li>
-                <li><a href="#blog-section" class="nav-link">Blog</a></li>
-                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                <li><a href="#staff-picks-section" class="nav-link">Staff Picks</a></li>
+          <li><a href="#event-details" class="nav-link">Event History</a></li>	
+         <li><a href="" class="nav-link">Photos</a></li>	
+<li><a href="" class="nav-link">Search</a></li>	
               </ul>
             </nav>
           </div>
@@ -119,8 +118,54 @@
     </div>  
 
 
+    <div class="site-section event-wrap" id="events-section">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-12 text-center">
+			<h3 class="section-sub-title">ONGOING</h3>
+			<h2 class="mb-1 text-leather ff-NG">EVENTS</h2>
+          </div>
+        </div>
+      </div>
+      <div class="slide-one-item home-slider owl-carousel">
+          <div>
+            <div class="event-banner">
+              <figure class="mb-4 d-block align-items-center justify-content-center">
+                <div><img th:src="@{/banners/bannerWarehouse.png}" alt="memorynotfound warehouse banner" class="mb-3"></div>
+              </figure>             
+            </div>
+            <p></p>
+            <h1 class="text-ink ff-NSB">Warehouse Sale Event</h1>
+            <p class="text-grey ff-N">Event details.</p> 
+          </div>
+          
+          <div>
+            <div class="event-banner">
+              <figure class="mb-4 d-block align-items-center justify-content-center">
+                <div><img th:src="@{/banners/bannerHalloween.png}" alt="memorynotfound halloween banner" class="mb-3"></div>
+              </figure>       
+            </div>
+            <p></p>
+            <h1 class="text-ink ff-NSB">Halloween Event</h1>
+            <p class="text-grey ff-N">Event details.</p>       
+          </div>
+
+          <div>
+            <div class="event-banner">
+              <figure class="mb-4 d-block align-items-center justify-content-center">
+                <div><img th:src="@{/banners/bannerReadingNight.png}" alt="memorynotfound reading night banner" class="mb-3"></div>
+              </figure>
+            </div>
+            <p></p>
+            <h1 class="text-ink ff-NSB">Reading Night Event</h1>
+            <p class="text-grey ff-N">Event details.</p>              
+          </div>
+
+        </div>
+    </div>
+
     
-    <div class="site-section" id="products-section">
+    <div class="site-section" id="staff-picks-section">
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-6 text-center">
@@ -255,6 +300,8 @@
       </div>
     </div>
     
+    
+    <!--  old email 'get updates' section
     <div class="site-blocks-cover inner-page-cover overlay get-notification"  th:style="'background: url(/images/storefront/central.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
       <div class="container">
 
@@ -270,9 +317,10 @@
         </div>
 
       </div>
-    </div>
+	</div>
+	-->
 
-    <div class="site-section bg-light">
+    <div class="site-section bg-light" id="event-details">
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-6 text-center">
@@ -331,84 +379,6 @@
 
       </div>
     </div>
-
-
-    <div class="site-section" id="about-section">
-      <div class="container">
-        <div class="row align-items-lg-center">
-          <div class="col-md-8 mb-5 mb-lg-0 position-relative">
-            <img th:src="@{/images/bookshelves/cbe_0040.JPG}" class="img-fluid" alt="Image">
-            <div class="experience">
-              <span class="year">Trusted Merchant</span>
-              <span class="caption">for 50 years</span>
-            </div>
-          </div>
-          <div class="col-md-3 ml-auto">
-            <h3 class="section-sub-title">Merchant Company</h3>
-            <h2 class="section-title mb-3">About Us</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui fuga ipsa, repellat blanditiis nihil, consectetur. Consequuntur eum inventore, rem maxime, nisi excepturi ipsam libero ratione adipisci alias eius vero vel!</p>
-            <p><a href="#" class="btn btn-black btn-black--hover rounded-0">Learn More</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-    <div class="site-section border-bottom" id="team-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center">
-            <h3 class="section-sub-title">Team</h3>
-            <h2 class="section-title mb-3">Leadership</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-            <div class="person text-center">
-              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid rounded w-75 mb-3">
-              <h3>John Rooster</h3>
-              <p class="position text-muted">Co-Founder, President</p>
-              <p class="mb-4">Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
-              <ul class="ul-social-circle">
-                <li><a href="#"><span class="icon-facebook"></span></a></li>
-                <li><a href="#"><span class="icon-twitter"></span></a></li>
-                <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-            <div class="person text-center">
-              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid rounded w-75 mb-3">
-              <h3>Tom Sharp</h3>
-              <p class="position text-muted">Co-Founder, COO</p>
-              <p class="mb-4">Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
-              <ul class="ul-social-circle">
-                <li><a href="#"><span class="icon-facebook"></span></a></li>
-                <li><a href="#"><span class="icon-twitter"></span></a></li>
-                <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
-            <div class="person text-center">
-              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid rounded w-75 mb-3">
-              <h3>Winston Hodson</h3>
-              <p class="position text-muted">Marketing</p>
-              <p class="mb-4">Nisi at consequatur unde molestiae quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore suscipit inventore deserunt tenetur.</p>
-              <ul class="ul-social-circle">
-                <li><a href="#"><span class="icon-facebook"></span></a></li>
-                <li><a href="#"><span class="icon-twitter"></span></a></li>
-                <li><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     
     <!--  
     <div class="site-blocks-cover overlay get-notification" id="special-section" th:style="'background: url(/images/storefront/central.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
@@ -430,175 +400,7 @@
     </div>
     -->
 
-    <div class="site-section bg-light" id="services-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center">
-            <h3 class="section-sub-title">Our Services</h3>
-            <h2 class="section-title mb-3">We Offer Services</h2>
-          </div>
-        </div>
-        <div class="row align-items-stretch">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-pie_chart" style="color: #9d1d19;"></span></div>
-              <div>
-                <h3>Business Consulting</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-backspace" style="color: #9d1d19;"></span></div>
-              <div>
-                <h3>Market Analysis</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-av_timer" style="color: #9d1d19;"></span></div>
-              <div>
-                <h3>User Monitoring</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-beenhere" style="color: #9d1d19;"></span></div>
-              <div>
-                <h3>Seller Consulting</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="400">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-business_center" style="color: #9d1d19;"></span></div>
-              <div>
-                <h3>Financial Investment</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="500">
-            <div class="unit-4 d-flex">
-              <div class="unit-4-icon mr-4"><span class="text-primary icon-cloud_done" style="color: #9d1d19;"></span></div>
-              <div>
-                <h3>Financial Management</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="site-section event-wrap" id="events-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center">
-			<h3 class="section-sub-title">ONGOING</h3>
-			<h2 class="mb-1 text-leather ff-NG">EVENTS</h2>
-          </div>
-        </div>
-      </div>
-      <div class="slide-one-item home-slider owl-carousel">
-          <div>
-            <div class="event-banner">
-              <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/banners/bannerWarehouse.png}" alt="memorynotfound warehouse banner" class="mb-3"></div>
-              </figure>             
-            </div>
-            <p></p>
-            <h1 class="text-ink ff-NSB">Warehouse Sale Event</h1>
-            <p class="text-grey ff-N">Event details.</p> 
-          </div>
-          
-          <div>
-            <div class="event-banner">
-              <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/banners/bannerHalloween.png}" alt="memorynotfound halloween banner" class="mb-3"></div>
-              </figure>       
-            </div>
-            <p></p>
-            <h1 class="text-ink ff-NSB">Halloween Event</h1>
-            <p class="text-grey ff-N">Event details.</p>       
-          </div>
-
-          <div>
-            <div class="event-banner">
-              <figure class="mb-4 d-block align-items-center justify-content-center">
-                <div><img th:src="@{/banners/bannerReadingNight.png}" alt="memorynotfound reading night banner" class="mb-3"></div>
-              </figure>
-            </div>
-            <p></p>
-            <h1 class="text-ink ff-NSB">Reading Night Event</h1>
-            <p class="text-grey ff-N">Event details.</p>              
-          </div>
-
-        </div>
-    </div>
-
-    
-
-    <div class="site-section" id="blog-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center">
-            <h3 class="section-sub-title">Blog</h3>
-            <h2 class="section-title mb-3">Blog Posts</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular"><a href="#" class="text-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
-              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div> 
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular"><a href="#" class="text-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular"><a href="#" class="text-black">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div> 
-          </div>
-          
-        </div>
-      </div>
-    </div>
-
-   
-
-
+<!--  old contact form
     <div class="site-section bg-light" id="contact-section" style="background: #8f5100;">
       <div class="container">
         <div class="row mb-5">
@@ -664,6 +466,7 @@
         
       </div>
     </div>
+-->
 
   
     <footer class="site-footer bg-white">
